--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -40,7 +40,7 @@ h2 {
     float: left;
     font-size: 280%;
     margin-left: 30px;
-    width: 30%;
+    
 }
 
 /* navigation links */
@@ -48,7 +48,7 @@ h2 {
 
 
 #menu {
-    width: 100%;
+    float: right;
     font-size: 110%;
     letter-spacing: 4px;
 }
@@ -59,13 +59,13 @@ h2 {
 }
 
 #menu li {
-    
+    float: right;
     list-style-type: none;
     margin-right: 25px;
 }
 
 #menu a {
-    float: right;
+    
     text-decoration: none;
     color: inherit;
 }
@@ -192,7 +192,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    right: 0;
+    left: 0;
     z-index: 3;
 }
 
